--- a/public/front/css/custom.css
+++ b/public/front/css/custom.css
@@ -511,10 +511,14 @@ box-shadow: 0 3px 5px rgba(0, 0, 0, 0.25);
 }
 
 /* BUTTON STYLES */
-
 .btn{
     border-radius: 10px;
     padding: 6px 12px;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 180%; /* 27px */
+    letter-spacing: -0.3px;
 }
 
 /* CARD STYLES */
@@ -535,7 +539,41 @@ box-shadow: 0 3px 5px rgba(0, 0, 0, 0.25);
 }
 
 .card-image{
+    padding: 40px 45px;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: end;
+    gap: 35px;
+    min-height: 450px;
+    position: relative;
+    overflow: hidden;
+}
 
+.card-image img{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: auto;
+    transform: translate(-50%,-50%);
+}
+
+.card-image .overlay{
+    position: absolute;
+    z-index: 2;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    opacity: .2;
+}
+
+.card-image .card-content{
+    width: 50%;
+    position: relative;
+    z-index: 3;
+    color: white;
 }
 
 .card-icon{
@@ -591,6 +629,14 @@ box-shadow: 0 3px 5px rgba(0, 0, 0, 0.25);
     background-color: black;
     border-radius: 15px;
     height: 240px;
+}
+
+.folder-card .folder-overlay{
+    background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
+    position: absolute;
+    width: 100%;
+    height: 70px;
+    bottom: 120px;
 }
 
 .folder-text{
