--- a/public/front/css/custom.css
+++ b/public/front/css/custom.css
@@ -589,6 +589,15 @@ box-shadow: 0 3px 5px rgba(0, 0, 0, 0.25);
     font-size: 1.5em;
 }
 
+.gazette-card{
+    text-decoration: none;
+    color: black;
+    padding: 20px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 35px; 
+}
+
 /* FOLDER STYLES */
 .folder-green .folder-body,
 .folder-green .folder-head{
