--- a/public/front/css/custom.css
+++ b/public/front/css/custom.css
@@ -542,6 +542,12 @@ box-shadow: 0 3px 5px rgba(0, 0, 0, 0.25);
     min-height: 450px;
     align-items: flex-start;
     justify-content: end;
+    margin-bottom: 0px;
+}
+
+.owl-theme .owl-nav{
+    margin-top: 0px;
+    margin-bottom: 30px;
 }
 
 .card-image{
