--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -4,26 +4,29 @@
     margin-top: 16px;
 }
 
-.leftbar-tab-menu .main-icon-menu{
+.leftbar-tab-menu .main-icon-menu {
     background-color: #551312;
 }
 
-.leftbar-tab-menu .main-icon-menu .main-icon-menu-body .nav.nav-tabs .nav-link.active, .leftbar-tab-menu .main-icon-menu .main-icon-menu-body .nav.nav-tabs .nav-link:active{
+.leftbar-tab-menu .main-icon-menu .main-icon-menu-body .nav.nav-tabs .nav-link.active,
+.leftbar-tab-menu .main-icon-menu .main-icon-menu-body .nav.nav-tabs .nav-link:active {
     color: #7C3235 !important;
 }
 
-.leftbar-tab-menu .main-menu-inner .menu-body .nav-item .nav-link.active, .leftbar-tab-menu .main-menu-inner .menu-body .nav-item .nav-link.active i{
+.leftbar-tab-menu .main-menu-inner .menu-body .nav-item .nav-link.active,
+.leftbar-tab-menu .main-menu-inner .menu-body .nav-item .nav-link.active i {
     color: #7C3235;
 }
 
-.leftbar-tab-menu .main-icon-menu .main-icon-menu-body .nav.nav-tabs .nav-link.active, .leftbar-tab-menu .main-icon-menu .main-icon-menu-body .nav.nav-tabs .nav-link:focus{
+.leftbar-tab-menu .main-icon-menu .main-icon-menu-body .nav.nav-tabs .nav-link.active,
+.leftbar-tab-menu .main-icon-menu .main-icon-menu-body .nav.nav-tabs .nav-link:focus {
     background-color: #7C3235 !important;
 }
 
-.leftbar-tab-menu .main-icon-menu .main-icon-menu-body .nav.nav-tabs .nav-link{
-    background-color: rgba(124, 50, 53, .3); 
+.leftbar-tab-menu .main-icon-menu .main-icon-menu-body .nav.nav-tabs .nav-link {
+    background-color: rgba(124, 50, 53, .3);
 }
 
-.leftbar-tab-menu .main-icon-menu .pro-metrica-end{
+.leftbar-tab-menu .main-icon-menu .pro-metrica-end {
     background-color: transparent;
 }
