CT1. Denuncia Ciudadana modulo en front y back

--- a/public/front/css/custom.css
+++ b/public/front/css/custom.css
@@ -149,6 +149,10 @@ small {
     justify-content: center;
 }
 
+.icon.blue {
+    background-color: #507CCC;
+}
+
 .icon ion-icon {
     color: white;
     margin-bottom: 0;
