--- a/public/front/css/custom.css
+++ b/public/front/css/custom.css
@@ -605,7 +605,8 @@ body {
     top: 50%;
     left: 50%;
     width: 100%;
-    height: auto;
+    height: 100%;
+    object-fit: cover;
     transform: translate(-50%, -50%);
 }
 
@@ -768,6 +769,17 @@ body {
     width: 150px;
     position: relative;
     display: inline-block;
+}
+
+@media screen and (max-width: 64em) {
+
+    .folder-text {
+        padding: 30px 15px;
+    }
+
+    .folder-document {
+        width: 140px;
+    }
 }
 
 /* FOOTER
