CT3. Cambio de tamaño de imagenes en tarjetas de blog

--- a/public/front/css/custom.css
+++ b/public/front/css/custom.css
@@ -802,6 +802,11 @@ body {
     text-decoration: underline;
 }
 
+.card-blog .card-img-top {
+    height: 300px;
+    object-fit: cover;
+}
+
 /* FOOTER
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .page-footer {
