--- a/public/front/css/custom.css
+++ b/public/front/css/custom.css
@@ -579,6 +579,14 @@ small {
     margin-bottom: 30px;
 }
 
+.owl-prev, .owl-next{
+    width: 30px;
+    height: 30px;
+    border-radius: 100% !important;
+    background-color: #551312 !important;
+    color: #fff !important;
+}
+
 .card-image {
     padding: 40px 45px;
     flex-direction: column;
