CT2. Pantallas Completas de Controlaría, Nuevas imagenes de placeholder, cambios variados en estilos de página web

--- a/public/front/css/custom.css
+++ b/public/front/css/custom.css
@@ -687,6 +687,13 @@ small {
     gap: 35px;
 }
 
+.card-alignment-center {
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
+    gap: 35px;
+}
+
 /* BANNER */
 .desktop-banner{
     display: block !important;
